conv-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conv-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: backend
  template:
    metadata:
      name: conv-api
      labels:
        components: backend
    spec:
      containers:
        - name: conv-api
          image: antonlarichev/conv-api:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "256Mi"
              cpu: "200m"
          volumeMounts:
            - name: pictures
              mountPath: /opt/app/uploads
      volumes:
        - name: pictures
          persistentVolumeClaim:
            claimName: pictures-pvc
