mq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mq-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: mq
  template:
    metadata:
      name: mq
      labels:
        components: mq
    spec:
      containers:
        - name: mq
          image: rabbitmq:4.0.9-management-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5672
            - containerPort: 15672
          resources:
            limits:
              memory: "512Mi"
              cpu: "400m"
          volumeMounts:
            - name: mq-data
              mountPath: /var/lib/rabbitmq
      volumes:
        - name: mq-data
          persistentVolumeClaim:
            claimName: mq-pvc
