conv-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: conv-api-clusterip
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
  selector:
    components: backend
