conv-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: conv-service-clusterip
spec:
  type: ClusterIP
  ports:
    - port: 8000
      protocol: TCP
  selector:
    components: converter
