mq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mq-clusterip
spec:
  type: ClusterIP
  ports:
    - port: 5672
      protocol: TCP
  selector:
    components: mq
