node-port.yml
apiVersion: v1
kind: Service
metadata:
  name: conv-app-port
spec:
  type: NodePort
  ports:
    - port: 3001
      targetPort: 80
      nodePort: 31201
  selector:
    components: frontend
